--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^7.4.1",
+    "class-variance-authority": "^0.7.1",
     "next": "16.1.6",
+    "payload": "^3.77.0",
+    "prisma": "^7.4.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.1",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
